# LevialdiShrinking

./: CMakeLists.txt  README.md
include/: CCLabler.h  Levialdi.h
src/: CCLabeler.cpp  Levialdi.cu  main.cpp
